<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="40dp"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/card_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view"
        android:src="@drawable/person"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20sp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first_name"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name"
        android:hint="@string/your_first_name"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:nextFocusDown="@id/last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHighlight="@color/purple_700"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/name"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/last_name"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name"
        android:hint="@string/your_last_name"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:nextFocusDown="@id/empl_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHighlight="@color/purple_700"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/name"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/empl_id"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/empl_id"
        android:hint="@string/your_employee_id"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:nextFocusDown="@id/address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHighlight="@color/purple_700"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/ic_person"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/address"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/empl_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        android:hint="@string/your_address"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:nextFocusDown="@id/send_data"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHighlight="@color/purple_700"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/address"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/empl_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/send_data"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_data"
                android:text="@string/send_data"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="70dp"
                app:cornerRadius="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>