<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiveActivity">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="40dp"
        app:cardCornerRadius="30dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/card_color"
        android:layout_width="match_parent"
        android:layout_height="600dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hello_intro"
                android:text="Hello Introduction"
                android:textSize="25sp"
                android:textStyle="italic"
                android:layout_marginStart="20sp"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textColorHighlight="@color/purple_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/image_view"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view"
                android:src="@drawable/person"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20sp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:layout_constraintTop_toBottomOf="@id/hello_intro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/first_name"
                app:layout_constraintVertical_chainStyle="packed"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/first_name"
                android:text="@string/your_first_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textColorHighlight="@color/purple_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20sp"
                app:layout_constraintTop_toBottomOf="@id/image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/last_name"
                app:layout_constraintVertical_chainStyle="packed"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/last_name"
                android:text="@string/your_last_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textColorHighlight="@color/purple_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20sp"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/empl_id"
                app:layout_constraintVertical_chainStyle="packed"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/empl_id"
                android:text="@string/your_employee_id"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textColorHighlight="@color/purple_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20sp"
                app:layout_constraintTop_toBottomOf="@id/last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/address"
                app:layout_constraintVertical_chainStyle="packed"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/address"
                android:text="@string/your_address"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textColorHighlight="@color/purple_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20sp"
                app:layout_constraintTop_toBottomOf="@id/empl_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>